<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:padding="15dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="106dp"
            android:layout_height="103dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ikon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_masukkan_nama_dan_nim"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/bg_gradasi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="15dp">
        <TextView
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/nama"
            android:background="@drawable/form"
            android:hint="@string/nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/nim"
            android:background="@drawable/form"
            android:hint="@string/nim"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="number"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#29C7DC"
            android:textStyle="bold"
            android:background="@drawable/form"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
        <TextView
            android:text="@string/registrasi"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <TextView
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>